--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@angular/common": "~9.1.13",
     "@angular/compiler": "~9.1.13",
     "@angular/core": "~9.1.13",
+    "@angular/fire": "^6.0.4",
     "@angular/forms": "~9.1.13",
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.3.2",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
